<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Simula">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/swipeable"
            android:padding="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="60dp">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Simula"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/lci"
                android:contentDescription="@string/lci"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lci"
                android:textSize="11sp"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Pangalawa"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:src="@drawable/bis"
                android:contentDescription="@string/bis"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bis"
                android:textSize="11sp"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/cp"
                android:contentDescription="@string/cp"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cp"
                android:textSize="11sp"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>