<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Koloniyalisasyon">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/swipeable"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/kolonialismo1"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/kolonialismo2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="40dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="271dp"
                android:src="@drawable/baybayindocs"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ust"
                android:textSize="11sp"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>